--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@discordjs/rest": "^1.5.0",
+    "discord-api-types": "^0.37.35",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3"
   }
